# garmin-runner

./: .env.example  .gitignore  README.md  pyproject.toml
config/: athlete.example.yaml
docs/superpowers/plans/: 2026-07-19-weekly-daily-detail-table-plan.md
docs/superpowers/specs/: 2026-07-19-weekly-daily-detail-table-design.md
src/garmin_runner/: __init__.py  cli.py  coach.py  config.py  fit.py  garmin_client.py  normalize.py  storage.py  sync.py
src/garmin_runner/analysis/: __init__.py  monthly.py  single_activity.py  weekly.py
src/garmin_runner/reporting/: __init__.py  daily.py  monthly.py  weekly.py
tests/: test_cli_diagnostics.py  test_coach.py  test_config.py  test_credentials_setup.py  test_garmin_client.py  test_monthly_report.py  test_normalize.py  test_report_links.py  test_single_activity_analysis.py  test_storage.py  test_weekly_report.py
